--- a/scss/material.scss
+++ b/scss/material.scss
@@ -9,7 +9,7 @@
 .hljs-keyword,
 .hljs-selector-tag,
 .hljs-subst {
-  color: #c678dd;
+  color: #c792ea;
 }
 
 .hljs-number,
@@ -17,12 +17,12 @@
 .hljs-variable,
 .hljs-template-variable,
 .hljs-tag .hljs-attr {
-  color: #e06c75;
+  color: #ff5370;
 }
 
 .hljs-string,
 .hljs-doctag {
-  color: #98c379;
+  color: #c3e88d;
 }
 
 .hljs-title,
@@ -61,7 +61,7 @@
 
 .hljs-built_in,
 .hljs-builtin-name {
-  color: #56b6c2;
+  color: #89ddff;
 }
 
 .hljs-meta {
